--- a/Module_3 Server Side/Week_14/3_Saturday/Unsolved/package.json
+++ b/Module_3 Server Side/Week_14/3_Saturday/Unsolved/package.json
@@ -1,15 +1,16 @@
 {
   "name": "exercise1_animals",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
   },
-  "author": "",
+  "author": "Mahdi H",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4",
+    "express": "^4.16.3",
     "express-handlebars": "^3.0.0"
-  }
+  },
+  "description": ""
 }
